k8s/base/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: demo
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: nestjs-ms/api-gateway:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: demo
spec:
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 80
      targetPort: 3000
