k8s/base/orders-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-service
  namespace: demo
  labels:
    app: orders-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-service
  template:
    metadata:
      labels:
        app: orders-service
    spec:
      containers:
        - name: orders-service
          image: nestjs-ms/orders-service:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3003
              name: tcp
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: demo
spec:
  selector:
    app: orders-service
  ports:
    - name: tcp
      port: 3003
      targetPort: 3003
